crates/llvm2-test/tests/snapshots/cli__doctor_help.snap
---
source: crates/llvm2-test/tests/cli.rs
expression: "help_of(&[\"doctor\"])"
---
Check environment for required tools

Usage: llvm2-test doctor [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON following the schemas in `evals/schema/`
          - junit: JUnit XML for CI consumers
          
          [default: human]

      --for <FOR_CMD>
          Restrict checks to tools needed by one subcommand

          Possible values:
          - all:       Everything across every subcommand
          - matrix:    Just the tools `matrix` needs
          - suite:     Just the tools `suite` needs
          - fuzz:      Just the tools `fuzz` needs
          - rustc:     Just the tools `rustc` needs
          - bootstrap: Just the tools `bootstrap` needs
          - ecosystem: Just the tools `ecosystem` needs
          - prove:     Just the tools `prove` needs
          - pipeline:  Just the tools `pipeline` needs
          - report:    Just the tools `report` needs
          
          [default: all]

  -o, --out <PATH>
          Write machine-readable result artifact here. Default:
          `evals/results/<cmd>/<iso-date>.json`

      --config <PATH>
          Config file (TOML). Default: `llvm2-test.toml` at repo root

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
