crates/llvm2-test/tests/snapshots/cli__ecosystem_help.snap
---
source: crates/llvm2-test/tests/cli.rs
expression: "help_of(&[\"ecosystem\"])"
---
WS6 — Run `cargo test` on top-100 crates.io

Usage: llvm2-test ecosystem [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON following the schemas in `evals/schema/`
          - junit: JUnit XML for CI consumers
          
          [default: human]

      --top <N>
          Number of top crates to test
          
          [default: 100]

      --crate-name <NAME>
          Test a single crate by name

  -o, --out <PATH>
          Write machine-readable result artifact here. Default:
          `evals/results/<cmd>/<iso-date>.json`

      --cache-dir <PATH>
          Directory for cloned sources; defaults to `~/.llvm2-test/ecosystem-cache/`

      --config <PATH>
          Config file (TOML). Default: `llvm2-test.toml` at repo root

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
