crates/llvm2-test/tests/snapshots/cli__prove_help.snap
---
source: crates/llvm2-test/tests/cli.rs
expression: "help_of(&[\"prove\"])"
---
WS7 — Discharge z4 lowering obligations

Usage: llvm2-test prove [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON following the schemas in `evals/schema/`
          - junit: JUnit XML for CI consumers
          
          [default: human]

      --width <WIDTH>
          Bitwidth to prove at

          Possible values:
          - w8:         8-bit
          - w16:        16-bit
          - w32:        32-bit
          - w64:        64-bit
          - parametric: Parametric width (BV theory)
          
          [default: w8]

  -o, --out <PATH>
          Write machine-readable result artifact here. Default:
          `evals/results/<cmd>/<iso-date>.json`

      --obligation <GLOB>
          Glob over obligation names

      --config <PATH>
          Config file (TOML). Default: `llvm2-test.toml` at repo root

      --timeout-per-query <SECS>
          Per-query timeout in seconds
          
          [default: 120]

      --cache-dir <PATH>
          Proof cache directory

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
