crates/llvm2-test/tests/snapshots/cli__suite_help.snap
---
source: crates/llvm2-test/tests/cli.rs
expression: "help_of(&[\"suite\"])"
---
WS2 — Run the external llvm-test-suite SingleSource corpus

Usage: llvm2-test suite [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON following the schemas in `evals/schema/`
          - junit: JUnit XML for CI consumers
          
          [default: human]

      --filter <GLOB>
          Glob filter over test-suite source paths

  -o, --out <PATH>
          Write machine-readable result artifact here. Default:
          `evals/results/<cmd>/<iso-date>.json`

      --optlevel <N>
          Optimization level for the LLVM2 compile (0-3)
          
          [default: 0]

      --clone-corpus
          Clone `llvm-test-suite` into `~/llvm-test-suite-ref/` if missing

      --config <PATH>
          Config file (TOML). Default: `llvm2-test.toml` at repo root

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
