crates/llvm2-test/tests/snapshots/cli__top_help.snap
---
source: crates/llvm2-test/tests/cli.rs
expression: "help_of(&[])"
---
The single entry point for every test, fuzz, and proof workstream in the LLVM2 program. See
`designs/2026-04-19-proving-llvm2-replaces-llvm.md` and `docs/testing/README.md`. No shell scripts.
No Python. Every subcommand ships `--format json`, a `# Examples` block in its `--help`, and a typed
schema under `evals/schema/`.

# Examples

  llvm2-test matrix --format human
  llvm2-test doctor --for fuzz
  llvm2-test report --out reports/weekly/2026-04-19.md

Usage: llvm2-test [OPTIONS] <COMMAND>

Commands:
  matrix      WS1 — Run the workspace unit/integration test matrix
  suite       WS2 — Run the external llvm-test-suite SingleSource corpus
  fuzz        WS3 — Run differential fuzzers: csmith, yarpgen, tmir-gen
  rustc       WS4 — Drive `rustc_codegen_llvm2` + rustc UI tests
  bootstrap   WS5 — Bootstrap rustc with LLVM2
  ecosystem   WS6 — Run `cargo test` on top-100 crates.io
  prove       WS7 — Discharge z4 lowering obligations
  pipeline    WS8 — Prove non-ISel stages: regalloc, scheduler, emit
  report      WS9 — Generate weekly report + dashboard
  ratchet     Run ratchet checks (called by CI)
  doctor      Check environment for required tools
  lint-linux  Cross-compile check for Linux `#[cfg(target_os = "linux")]` paths in `llvm2-codegen`
              (issue #346). Safe on macOS-only boxes — targets not installed via `rustup target add`
              are reported as `skipped`
  help        Print this message or the help of the given subcommand(s)

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON following the schemas in `evals/schema/`
          - junit: JUnit XML for CI consumers
          
          [default: human]

  -o, --out <PATH>
          Write machine-readable result artifact here. Default:
          `evals/results/<cmd>/<iso-date>.json`

      --config <PATH>
          Config file (TOML). Default: `llvm2-test.toml` at repo root

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
